# djchat-study

./: README.md
djchat-front-main/: package-lock.json  package.json
djchat-front-main/src/components/: ToggleColorMode.tsx
djchat-front-main/src/components/Main/: ExploreServers.tsx  MessageInterface.tsx  MessageInterfaceChannels.tsx  Scroll.tsx
djchat-front-main/src/components/Membership/: JoinServerButton.tsx  MembershipCheck.tsx
djchat-front-main/src/components/PrimaryAppBar/: AccountButton.tsx
djchat-front-main/src/components/PrimaryDraw/: DrawToggle.tsx  PopularChannels.tsx
djchat-front-main/src/components/SecondaryDraw/: ExploreCategories.tsx  ServerChannels.tsx
djchat-front-main/src/context/: AuthContext.tsx  MemberContext.tsx
djchat-front-main/src/helpers/: jwtinterceptor.ts
djchat-front-main/src/hooks/: userCrud.ts
djchat-front-main/src/pages/: Home.tsx  Register.tsx  Server.tsx  TestLogin.tsx
djchat-front-main/src/services/: AuthServices.ts  ProtectedRoute.tsx  chatService.ts  membershipService.ts
djchat-front-main/src/theme/: theme.tsx
djchat-main/: .gitignore  commands.md  pyproject.toml  schema.yml
djchat-main/account/: authenticate.py  serializers.py  views.py
djchat-main/account/migrations/: 0001_initial.py
djchat-main/config/: asgi.py  settings.py  urls.py
djchat-main/server/: admin.py  views.py
djchat-main/server/migrations/: 0001_initial.py  0002_category_icon_server_banner_server_icon_and_more.py
djchat-main/webchat/: consumer.py
djchat-main/webchat/migrations/: 0001_initial.py
